--- a/TextDownloader/TextDownloader.csproj
+++ b/TextDownloader/TextDownloader.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Setting.Designer.cs">
       <DependentUpon>Setting.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestDeletePhrase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestDeletePhrase.Designer.cs">
+      <DependentUpon>TestDeletePhrase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Util.cs" />
     <EmbeddedResource Include="ChapList.resx">
       <DependentUpon>ChapList.cs</DependentUpon>
@@ -92,6 +98,9 @@
     </Compile>
     <EmbeddedResource Include="Setting.resx">
       <DependentUpon>Setting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestDeletePhrase.resx">
+      <DependentUpon>TestDeletePhrase.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
